[gd_scene load_steps=8 format=2]

[ext_resource path="res://Code/enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Ennemis/ENEMY_temp_final.png" type="Texture" id=2]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42.4579, 7.19913 )

[sub_resource type="Animation" id=2]
resource_name = "iddle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 3 ]
}

[node name="enemy" type="KinematicBody2D" groups=[
"enemy",
]]
scale = Vector2( 3, 7 )
collision_layer = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 6
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -23.4464, -0.93306 )
shape = SubResource( 1 )

[node name="enemy_anim" type="AnimationPlayer" parent="."]
anims/iddle = SubResource( 2 )
anims/move = SubResource( 3 )
anims/shoot = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Timer_move" type="Timer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Timer_hit_lag" type="Timer" parent="."]
[connection signal="timeout" from="Timer_move" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer_hit_lag" to="." method="_on_Timer_hit_lag_timeout"]
